--- a/week4/BottleShop/BottleShop/BeerCollectionViewCell.xib
+++ b/week4/BottleShop/BottleShop/BeerCollectionViewCell.xib
@@ -11,48 +11,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="BeerCollectionViewCell" id="gTV-IL-0wX" customClass="BeerCollectionViewCell" customModule="BottleShop" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="147" height="252"/>
+            <rect key="frame" x="0.0" y="0.0" width="147" height="232"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="147" height="252"/>
+                <rect key="frame" x="0.0" y="0.0" width="147" height="232"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gJX-Ui-hg9">
-                        <rect key="frame" x="8" y="8" width="131" height="150"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="150" id="HXU-sC-Zlw"/>
-                        </constraints>
+                        <rect key="frame" x="10" y="10" width="127" height="148.66666666666666"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jKv-zW-zy1">
-                        <rect key="frame" x="53" y="163" width="41.333333333333343" height="22"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="22" id="x0j-Br-ZKx"/>
-                        </constraints>
+                        <rect key="frame" x="10" y="166.66666666666666" width="127" height="20.333333333333343"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lh-PB-2b9">
-                        <rect key="frame" x="53" y="188" width="41.333333333333343" height="22"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="22" id="538-bR-B7b"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="dET-ag-XzC">
-                        <rect key="frame" x="8" y="214" width="131" height="30"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dET-ag-XzC">
+                        <rect key="frame" x="10" y="192" width="127" height="30"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r6v-He-Cb9">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="30"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YFB-5G-Q1V">
-                                <rect key="frame" x="75" y="0.0" width="56" height="30"/>
+                                <rect key="frame" x="0.0" y="0.0" width="92" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r6v-He-Cb9">
+                                <rect key="frame" x="97" y="0.0" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="3To-y8-U8M"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="TIG-nv-J8Y"/>
@@ -63,27 +51,26 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="jKv-zW-zy1" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="1Xb-6N-5wt"/>
-                <constraint firstAttribute="trailing" secondItem="gJX-Ui-hg9" secondAttribute="trailing" constant="8" id="AZe-mn-8Gt"/>
-                <constraint firstItem="gJX-Ui-hg9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="Izz-Yi-kSN"/>
-                <constraint firstItem="1lh-PB-2b9" firstAttribute="top" secondItem="jKv-zW-zy1" secondAttribute="bottom" constant="3" id="Kda-Im-4ne"/>
-                <constraint firstItem="gJX-Ui-hg9" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="ewU-RA-mtI"/>
-                <constraint firstAttribute="bottom" secondItem="dET-ag-XzC" secondAttribute="bottom" constant="8" id="ihS-hn-uW2"/>
-                <constraint firstItem="jKv-zW-zy1" firstAttribute="top" secondItem="gJX-Ui-hg9" secondAttribute="bottom" constant="5" id="kMn-Pl-MRH"/>
-                <constraint firstAttribute="trailing" secondItem="dET-ag-XzC" secondAttribute="trailing" constant="8" id="qsh-TD-yBT"/>
-                <constraint firstItem="dET-ag-XzC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="rAD-t6-fbH"/>
+                <constraint firstAttribute="trailing" secondItem="gJX-Ui-hg9" secondAttribute="trailing" constant="10" id="AZe-mn-8Gt"/>
+                <constraint firstItem="gJX-Ui-hg9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Izz-Yi-kSN"/>
+                <constraint firstAttribute="trailing" secondItem="jKv-zW-zy1" secondAttribute="trailing" constant="10" id="diC-sG-rPs"/>
+                <constraint firstItem="gJX-Ui-hg9" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="ewU-RA-mtI"/>
+                <constraint firstAttribute="bottom" secondItem="dET-ag-XzC" secondAttribute="bottom" constant="10" id="ihS-hn-uW2"/>
+                <constraint firstItem="jKv-zW-zy1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="imo-YU-0DL"/>
+                <constraint firstItem="jKv-zW-zy1" firstAttribute="top" secondItem="gJX-Ui-hg9" secondAttribute="bottom" constant="8" id="kMn-Pl-MRH"/>
+                <constraint firstAttribute="trailing" secondItem="dET-ag-XzC" secondAttribute="trailing" constant="10" id="qsh-TD-yBT"/>
+                <constraint firstItem="dET-ag-XzC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="rAD-t6-fbH"/>
                 <constraint firstItem="gJX-Ui-hg9" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="rM0-0s-cwt"/>
-                <constraint firstItem="1lh-PB-2b9" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="sOU-4y-qWK"/>
-                <constraint firstItem="dET-ag-XzC" firstAttribute="top" secondItem="1lh-PB-2b9" secondAttribute="bottom" constant="3" id="wnM-Jz-yPL"/>
+                <constraint firstItem="dET-ag-XzC" firstAttribute="top" secondItem="jKv-zW-zy1" secondAttribute="bottom" constant="5" id="xyG-9e-pez"/>
             </constraints>
-            <size key="customSize" width="147" height="252"/>
+            <size key="customSize" width="147" height="232"/>
             <connections>
                 <outlet property="beerImageView" destination="gJX-Ui-hg9" id="9Th-LF-zcL"/>
                 <outlet property="beerInfoLabel" destination="YFB-5G-Q1V" id="7rT-ek-1BT"/>
                 <outlet property="beerNameLabel" destination="jKv-zW-zy1" id="370-8B-fpV"/>
                 <outlet property="beerSrmImageView" destination="r6v-He-Cb9" id="d78-2Z-Cv9"/>
-                <outlet property="beerTaglineLabel" destination="1lh-PB-2b9" id="a52-Ez-8TQ"/>
             </connections>
-            <point key="canvasLocation" x="38.931297709923662" y="-48.591549295774648"/>
+            <point key="canvasLocation" x="38.931297709923662" y="-55.633802816901408"/>
         </collectionViewCell>
     </objects>
 </document>
